<resources>
    <string name="app_name" translatable="false">Leaf IDE</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_agreement">User Agreement</string>

    <string name="launch_mode">Launch Mode</string>
    <string name="launch_from_external_storage">Launch From External Storage</string>
    <string name="launch_from_external_storage_summary">Save project files to external storage</string>
    <string name="launch_from_internal_storage">Launch From Internal Storage</string>
    <string name="launch_from_internal_storage_summary">Save project files to internal storage</string>

    <string name="no_writable_and_readable">Read and write permission denied</string>
    <string name="no_writable">Write permission denied</string>
    <string name="no_readable">Read permission denied</string>

    <string name="home">Home</string>
    <string name="module">Module</string>
    <string name="leaf_flow" translatable="false">Leaf Flow</string>
    <string name="terminal">Terminal</string>
    <string name="settings">Settings</string>

    <string name="app_crashed">App Crashed</string>
    <string name="app_crashed_header">Sorry, the software crashed due to the following reasons. Please submit the exception to the developer, or write an issue on the Github project page so that the exception can be fixed in time.</string>
    <string name="device_info">Device Info:</string>
    <string name="thread_group">Thread Group: %s</string>
    <string name="thread">Thread: %s</string>
    <string name="exception">Exception: %s</string>

    <string name="no_module">No Module</string>
    <string name="no_module_summary">Can be downloaded from Leaf Flow or installed locally</string>
    <string name="unsupported">Unsupported</string>
    <string name="no_project_or_modules_for_projects">There is no project or module for the project</string>
    <string name="click_to_create_project">Click the floating button to create a project</string>
    <string name="project_description">Project Description: %s</string>
    <string name="module_support">Module Support: %s</string>
    <string name="create_project">Create Project</string>
    <string name="no_supported_module_project">No applicable module project</string>
    <string name="download_from_leaf_flow">Available for download from Leaf Flow</string>
    <string name="unable_to_load_ui">Unable to load UI: Module status was updated</string>
    <string name="install_from_local">Install from local</string>
    <string name="copy_failure">Copy Failure: %s</string>
    <string name="copy_success">Copy Success</string>
    <string name="unable_to_resolve_module">Unable to resolve module</string>
    <string name="uninstall_module">Are you sure you want to uninstall this module?</string>

    <string name="cancel">Cancel</string>
    <string name="sure">Sure</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="uninstall">Uninstall</string>
    <string name="no_implementation">Not implemented here yet</string>

    <string name="global">Global</string>
    <string name="preference_global_summary">Set the app global properties</string>
    <string name="editor">Editor</string>
    <string name="preference_editor_summary">Controls the behavior of the editor</string>
    <string name="about">About</string>
    <string name="preference_about_summary">About app</string>
    <string name="app_update">Application Update</string>
    <string name="preference_app_update_summary">Set the update policy for the app</string>
    <string name="project_repo">Project Repo</string>
    <string name="open_source_license">Open Source License</string>
    <string name="check_update">check update</string>
    <string name="automatically_check_for_updates">Automatically check for updates</string>
    <string name="preference_automatically_check_for_updates_summary">Automatically check for a new version every time you start it</string>
    <string name="current_version">Current version</string>
    <string name="font_size">Font Size</string>
    <string name="preference_font_size_summary">Editor font size</string>
    <string name="space_instead_tab">Space Instead Of Tab</string>
    <string name="preference_space_instead_tab_enable_summary">Use spaces instead of tab</string>
    <string name="tab_width">Tab Width</string>
    <string name="preference_tab_width_summary">Number of spaces each tab represents</string>
    <string name="non_printable_character_display">Non Printable Character Display</string>
    <string name="preference_non_printable_character_display_summary">Choose which non-printable characters to display in editor</string>
    <string name="ligature">Ligature</string>
    <string name="preference_ligature_enable_summary">Render certain symbol combinations as corresponding mathematical symbols. For example != will be displayed as ≠</string>
    <string name="font_filepath">Custom Font</string>
    <string name="preference_font_filepath_summary">Use your font file as editor font</string>
    <string name="word_wrap">Word Wrap</string>
    <string name="preference_word_wrap_enable_summary">Wrap long lines to next line</string>
    <string name="magnify">Magnifier</string>
    <string name="preference_magnify_enable_summary">Magnify the area around cursor when selected</string>

    <string name="open_project_fail">Open Project Fail</string>
    <string name="open_project_fail_message">Please check if your project configuration is correct or if the modules that the project depends on have been installed</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save">Save</string>
    <string name="more">More…</string>
    <string name="close_project">Close Project</string>
    <string name="search_inside_file">Search inside file</string>
    <string name="search">Search</string>
    <string name="drawerlayout_expand">Expand</string>
    <string name="drawerlayout_shrink">Shrink</string>
    <string name="click_navigation_button_to_open">Click navigation button to open</string>
    <string name="file_list">File List</string>
    <string name="click_menu_button_to_open">Click menu button to open</string>
    <string name="options_menu">Options Menu</string>
    <string name="module_management">Module Management</string>
    <string name="error_opening_project">Error opening project</string>

    <string-array name="preference_tab_width">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="preference_non_printable">
        <item>\n</item>
    </string-array>
    <string name="preference_font_filepath_dialog_message">The absolute path to your font file, leaving it blank uses the default font</string>
</resources>