<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/undo"
        android:icon="@drawable/baseline_undo_24"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/redo"
        android:icon="@drawable/baseline_redo_24"
        android:title="@string/redo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:title="@string/save" />

    <item android:title="@string/search">
        <menu>
            <item
                android:id="@+id/find_in_file"
                android:title="@string/search_inside_file" />
        </menu>
    </item>

    <item
        android:id="@+id/exit"
        android:title="@string/close_project" />
</menu>