<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="check_update_on_startup"
        android:summary="@string/preference_automatically_check_for_updates_summary"
        app:iconSpaceReserved="false"
        app:title="@string/automatically_check_for_updates" />

    <Preference
        android:key="check_update"
        app:iconSpaceReserved="false"
        app:title="@string/check_update" />

    <Preference
        android:key="app_version_name"
        app:iconSpaceReserved="false"
        app:title="@string/current_version" />

</androidx.preference.PreferenceScreen>